<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">国韵互动汉语学习机</string>
    <string name="alertTitle">Warning</string>
    <string name="noSpace">The storage is insufficient</string>
    <string name="sd_available">Unavailable SD</string>
    <string name="unknownError">Unknown Error</string>
    <string name="mark_title">Bookmark</string>
    <string name="mark_continue">Continue</string>
    <string name="about_title">About</string>
    <string name="about_brief">Brief:</string>
    <string name="about_copy">Copyright:</string>
    <string name="about_state">Declare:</string>
    <string name="ok">OK</string>
    <string name="record_title">Overwrite the recorded file?</string>
    <string name="cancel">Cancel</string>
    <string name="record_error">Sorry，Record error</string>
    <string name="sleep_text">"My dear little friend, have a good sleep with the story please.
☆You will listen to the whole audio story with a soft music in the background.
☆You can close the sleep mode by tap the screen."</string>
    <string name="sleep_title">Sleep with the story…</string>
    <string name="main_op_open">Reading On</string>
    <string name="main_op_close">Reading Off</string>
    <string name="main_op_bg_open">Music On</string>
    <string name="main_op_bg_close">Music Off</string>
    <string name="main_op_flip_auto">Page flip automatic</string>
    <string name="main_op_flip_hand">Page flip manual</string>
    <string name="setting_slient">Reminder: Your device was sound closed.</string>
    <string name="netXingBook_title">Bookstore</string>
    <string name="netXingBook_down_title">Detail</string>
    <string name="netXingBook_down_free">Download</string>
    <string name="netXingBook_down_fee">￥%.2f Buy</string>
    <string name="netXingBook_down_has_fee">￥%.2f Buyed</string>
    <string name="netXingBook_down_age">For %s years old</string>
    <string name="downLoad_info_loading">The book is downloading</string>
    <string name="update_mes">"
New version was found, update it please.
"</string>
    <string name="update_now">Update</string>
    <string name="update_while">Cancel</string>
    <string name="update_title">New version</string>
    <string name="book_price_free">free</string>
    <string name="shelf_delete_dlg_title">Remove from shelf</string>
    <string name="shelf_delete_dlg_text">Sure to remove %s from the shelf？</string>
    <string name="netXingBook_detail_language">Language:</string>
    <string name="netXingBook_detail_cat">Category:</string>
    <string name="no_cat">Unclassified</string>
    <string name="myXingBook_has_delete">Removed already</string>
    <string name="myXingBook_delete_fail">Failed to remove</string>
    <string name="myXingBook_noBook_title">☆Tips</string>
    <string name="myXingBook_noBook_mes">There were no books in your bookshelf, buy or download some from the bookstore please.</string>
    <string name="myXingBook_noBook_know">I know</string>
    <string name="loading">Downloading</string>
    <string name="quit">Quit</string>
    <string name="quit_of_xingBook">Quit the Xingbook to have a rest!</string>
    <string name="waiting">Waiting</string>
    <string name="connecting">Connecting Network</string>
    <string name="download_pause">Paused</string>
    <string name="download_done">Done</string>
    <string name="download_error">Error</string>
    <string name="download_delete">Task been cancelled</string>
    <string name="download_starting">Starting…</string>
    <string name="download_pausing">Pausing…</string>
    <string name="unknown_error">Unknown error</string>
    <string name="has_donwload">The book was download completed, read it from the shelf please.</string>
    <string name="has_exit">This book just on your bookshelf</string>
    <string name="start_download">Download started and the book will be found on your bookshelf</string>
    <string name="xingbook_net_error">Unable to connect to the XingBook Store, please check the network.</string>
    <string name="netXingBook_back">Back</string>
    <string name="read_loading">Please wait while loading</string>
    <string name="myXingBook_loading">The book is downloading</string>
    <string name="myXingBook_downloadPrompt">Download info</string>
    <string name="myXingBook_download">Confirm to download</string>
    <string name="myXingBook_redownload_info">Download error, try again?</string>
    <string name="myXingBook_redownload">Retry</string>
    <string name="myXingBook_delete">Delete it</string>
    <string name="individual_title">Xing Club</string>
    <string name="individual_account">Account</string>
    <string name="individual_recharge">Xing card</string>
    <string name="individual_service">Service Center</string>
    <string name="individual_gift">My Gift</string>
    <string name="yuan">$</string>
    <string name="account_id">My Xing ID:</string>
    <string name="account_blance">Balance:</string>
    <string name="account_des">Xing ID is your identity in the Xing world. If you have any question, you may be requested to provide your Xing ID by the attendant.</string>
    <string name="account_email">Email:</string>
    <string name="account_phone">Mobile:</string>
    <string name="account_unbound">Unregistered</string>
    <string name="account_save">Save</string>
    <string name="account_loading">Retrieve your account info</string>
    <string name="account_info_fail">Error to retrieve your account info</string>
    <string name="account_info_format">Format error</string>
    <string name="about_software_version">Version number:</string>
    <string name="about_software_resolution">Resolution：</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="recharge_card_hint">Input your Xing card number here</string>
    <string name="recharge_query">Query</string>
    <string name="recharge_mes">"Input the Xing card number then press Query. The amount of money or books related with the card will shown. When press Put to bookshelf or recharge, then you can download books from the bookshelf or increase your balance. 
1. What is Xing card? 
\u0009Xing card is a manner to buy the Xingbook, red one can be used to increase your balance and blue one can be used to buy the book bulk.
2. How to obtain the Xing card? 
\u0009You can search Xing card from taobao.com, or contact your customer service which QQ number is 80036691."</string>
    <string name="recharge_move">Put to bookshelf</string>
    <string name="recharge_moving">Put to your bookshelf, please wait a while.</string>
    <string name="recharge_in">>Recharge</string>
    <string name="recharge_input_bookshelf_successful">Put to your bookshelf successfully, you can download books freely from the shelf</string>
    <string name="recharge_successful">Recharge completed</string>
    <string name="recharge_rmb">$</string>
    <string name="recharge_xingBao_value">Value of the card:</string>
    <string name="service_selector_Type">Category</string>
    <string name="service_questions">Feedback</string>
    <string name="service_suggestions ">Suggestions</string>
    <string name="service_requirement">Requires</string>
    <string name="service_consult">Questions</string>
    <string name="service_other">Others</string>
    <string name="service_give_comments">Detailed here:</string>
    <string name="service_your_phone">Your phone number(optional):</string>
    <string name="service_your_mail">Your email(optional):</string>
    <string name="service_submit">Submit</string>
    <string name="service_contact">Contact us:</string>
    <string name="service_xingBao_net">Website:</string>
    <string name="service_sina_weibo">Twitter:</string>
    <string name="service_qq">QQ:</string>
    <string name="service_phone">Phone:</string>
    <string name="service_fill_in_advice">Please fill the detail.</string>
    <string name="service_inputPhoneOrMail">Input the phone or email at least one.</string>
    <string name="service_committing">Submitting, wait please.</string>
    <string name="service_website">http://www.xingbook.com</string>
    <string name="service_weibo">http://twitter.com/Xingbook</string>
    <string name="service_qq_text">80036691</string>
    <string name="service_phone_text">+86010–82601356</string>
    <string name="notice_title">Notice</string>
    <string name="pay_doing">Querying the server…</string>
    <string name="pay_sucess">Queryed successful.</string>
    <string name="pay_insufficient">Sorry, your balance is insufficient.</string>
    <string name="unlogin">Unable to contact the server, retry while a minute.</string>
    <string name="record_save">The recording was saved.</string>
    <string name="parse_error">Error while open the book.</string>
    <string name="unsupport_version">The app version is too low to open the book, update it please.</string>
    <string name="unsupport_screenSize">"The book's display size does not match your device's screen size, there may be some discomfort while reading!"</string>
    <string name="net_connect_error">There seem to have some problems while connecting the server.</string>
    <string name="fc_start_read">Go!</string>
    <string name="fc_game_center">Game Center</string>
    <string name="fc_read_mode">Read Mode</string>
    <string name="fc_about">About</string>
    <string name="fc_no_game">There are no games bundled!</string>
    <string name="fc_game_diff">Find difference</string>
    <string name="fc_game_pin">Jigsaw puzzle</string>
    <string name="fc_game_draw">Draw</string>
    <string name="gameover">I know</string>
    <string name="gameover_text">Awesome, you have accomplish all the games!</string>
    <string name="audio_playing">Now playing:</string>
    <string name="end_page">You are at the last page</string>
    <string name="search_content">» By category</string>
    <string name="search_type">» By type</string>
    <string name="search_age">» By age</string>
    <string name="search_sex">» By gender</string>
    <string name="search_type_fee">» By fee</string>
    <string name="search_all">All</string>
    <string name="search_boy">Boy</string>
    <string name="search_girl">Girl</string>
    <string name="search_free">Free</string>
    <string name="search_fee">Fee</string>
    <string name="search_old">years</string>
    <string name="exit">Exit</string>
    <string name="group_inputname">Modify group name</string>
    <string name="group_gc">Recycle bin</string>
    <string name="shelf_manager_title">☆Tips: Manage books</string>
    <string name="shelf_manager_content">"●Tap the screen to the left ← can enter Manage Mode;
●Then long-press and drag the book to case or Recyle bin."</string>
    <string name="shelf_gc_title">☆Tips: Recyle bin</string>
    <string name="shelf_gc_content">You can drag the book onto Recyle bin to delete it for free the storage space, and redownload it when needed.</string>
    <string name="shelf_manager_read">Touch the screen then move to the right → can enter Read Mode.</string>
    <string name="shelf_manager_group0_title">☆Tips: BookShelf</string>
    <string name="shelf_manager_group0_content">Place the ebook for your daily use. Long-press and drag the book to the case to make the bookshelf clear, drag to the Recyle bin to save space of storage.</string>
    <string name="apk_download_error">Server busy, please try again later.</string>
    <string name="index">主界面</string>
</resources>
