<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/dialog_bg" android:layout_width="470.0px" android:layout_height="270.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="25.0px" android:textColor="@color/myxingbao_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/quit" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="45.0px" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="17.0px" android:textColor="@color/ok_color" android:gravity="center" android:id="@id/quit_dialog_ok" android:background="@drawable/markitem_click_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" />
        <Button android:textSize="17.0px" android:textColor="@color/ok_color" android:gravity="center" android:id="@id/quit_dialog_cancel" android:background="@drawable/markitem_click_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0px" android:text="@string/cancel" />
    </LinearLayout>
    <ImageView android:id="@id/imgview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginBottom="20.0px" android:src="@drawable/icon" android:layout_alignLeft="@id/linearLayout1" android:layout_centerVertical="true" />
    <TextView android:textSize="18.0px" android:textColor="@color/xingbao_detail_color" android:id="@id/textView1" android:paddingLeft="0.0px" android:paddingRight="30.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/quit_of_xingBook" android:layout_toRightOf="@id/imgview" android:layout_centerVertical="true" />
</RelativeLayout>
