<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/dialog_bg" android:layout_width="470.0px" android:layout_height="180.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="25.0px" android:textColor="@color/myxingbao_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/sd_available" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0px" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="17.0px" android:textColor="@color/ok_color" android:gravity="center" android:id="@id/shelf_sd_exit" android:background="@drawable/markitem_click_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit" />
        <Button android:textSize="17.0px" android:textColor="@color/ok_color" android:gravity="center" android:id="@id/shelf_sd_cancel" android:background="@drawable/markitem_click_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0px" android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>
